@@ -75,4 +75,10 @@ TODO: подумать о переделке DataHolder/Tensor/tensormath  в А
 * добавлен код для цветного вывода текста в консоль -- Console.hpp
 * статистика по тестированию теперь цветная;
 * добавлен тест на оператор поворота в трехмерном пространстве TestRot3;
-* тест для Layer модифицирован для оператора повортота;
+* тест для Layer модифицирован для оператора поворота;
+
+* добавлен слой Dropout;
+* добавлен поддержка Dropout в ModelTest;
+* добавлено распределение Бернулли в Tensor;
+* добавлено поэлементное перемножение тензоров Tensor::prod();
+* добавлена рассылка событий по сети, для управления отдельными слоями и компонентами;
